@@ -1,3 +1,9 @@
+2010-08-22 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.33
+	* fixed problem with focus effecting "key" statement - if focus was ever lost from
+	- graphics window - key statement would stop working.  added key trap to BasicOutput
+	- and logic to allow BasicGraph to regain focus
+	* syntax highliter updated for a few misses commands
+
 2010-08-16 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.31
 	* fixed linux to compile again after changes in 0.9.6.30
 	* removed most of the errors from LEX/basicParse.y 
